--- a/Projekt/Projekt.csproj
+++ b/Projekt/Projekt.csproj
@@ -58,6 +58,7 @@
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -87,6 +88,12 @@
     </Compile>
     <Compile Include="Formularze\DashboardPrzewoznik.designer.cs">
       <DependentUpon>DashboardPrzewoznik.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularze\Dashboarduzytkownik.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularze\Dashboarduzytkownik.Designer.cs">
+      <DependentUpon>Dashboarduzytkownik.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularze\Logowanie.cs">
       <SubType>Form</SubType>
@@ -158,6 +165,9 @@
     </Compile>
     <EmbeddedResource Include="Formularze\DashboardPrzewoznik.resx">
       <DependentUpon>DashboardPrzewoznik.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularze\Dashboarduzytkownik.resx">
+      <DependentUpon>Dashboarduzytkownik.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularze\Logowanie.resx">
       <DependentUpon>Logowanie.cs</DependentUpon>
