--- a/Projekt/Projekt.csproj
+++ b/Projekt/Projekt.csproj
@@ -120,6 +120,12 @@
     <Compile Include="Formularze\FormularzeUzytkownik\Dane_konta.Designer.cs">
       <DependentUpon>Dane_konta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularze\FormularzeUzytkownik\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularze\FormularzeUzytkownik\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularze\FormularzeUzytkownik\Moje_bilety.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -214,6 +220,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularze\FormularzeUzytkownik\Dane_konta.resx">
       <DependentUpon>Dane_konta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularze\FormularzeUzytkownik\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularze\FormularzeUzytkownik\Moje_bilety.resx">
       <DependentUpon>Moje_bilety.cs</DependentUpon>
